--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aws-cdk.core>=1.135.0
-aws-cdk.assertions>=1.135.0
-aws-cdk.aws_s3>=1.135.0
-aws-cdk.aws_glue>=1.135.0
+boto3
+cdk-ecr-deployment==2.0.2
+aws-cdk-lib>=2.0.0
+aws_cdk.aws_glue_alpha>=2.0.0alpha1
