Added Model Inference Stack

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -82,7 +82,7 @@
 # Either "mysql", "postgres" or "sqlite3", it's your choice
 type = mysql
 host = ${HOST}:3306
-name = grafana
+name = ${DATABASE}
 user = ${DB_USERNAME}
 ; # If the password contains # or ; you have to wrap it with triple quotes. Ex """#password;"""
 password = ${DB_PASSWORD}
