Small changes in dockerfile for LakeFS

--- a/lakefs/Dockerfile
+++ b/lakefs/Dockerfile
@@ -2,11 +2,11 @@ FROM treeverse/lakefs:latest
 
 # Configure Environment variables
 ENV LAKEFS_DATABASE_CONNECTION_STRING=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${HOST}:${PORT}/${DATABASE}
-ENV LAKEFS_AUTH_ENCRYPT_SECRET_KEY="[ENCRYPTION_SECRET_KEY]" 
+ENV LAKEFS_AUTH_ENCRYPT_SECRET_KEY="10a718b3f285d89c36e9864494cdd1507f3bc85b342df24736ea81f9a1134bcc09e90b6641"
 ENV LAKEFS_BLOCKSTORE_TYPE=s3
 
 # Set the PORT
 EXPOSE 8000
 
 # Set the ENTRYPOINT
-ENTRYPOINT [ "/app/lakefs", "run" ] 
+# ENTRYPOINT [ "/app/lakefs", "run" ] 
