Removed LakeFS entirely from the infrastructure

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,4 +1,4 @@
 FROM grafana/grafana-oss
 
 COPY grafana.ini /etc/grafana/grafana.ini
-COPY datasources.yaml /etc/grafana/provisioning/datasources/datasources.yaml
+#COPY datasources.yaml /etc/grafana/provisioning/datasources/datasources.yaml
