--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 boto3
-cdk-ecr-deployment==2.0.2
-aws-cdk-lib>=2.0.0
-aws_cdk.aws_glue_alpha>=2.0.0alpha1
+aws-cdk-lib>=2.8.0
+aws_cdk.aws_glue_alpha>=2.8.0a0np
